k8s/local/product-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  type: ClusterIP
  selector:
    app: product-api
  ports:
    - port: 8000
      targetPort: 8000
